# HomeOS-Smart-Home-System

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/infrastructure/: logger.cpp  logger.h
